compiler-tests/src/test/data/diagnostic/EnumClass.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

enum class <!REDACTED_ERROR!>NonClass<!>(@Redacted val a: Int)
